# fluent-filepicker

./: README.md  example.py  pyproject.toml
src/fluent_filepicker/: __init__.py  colors.py  multi_file_widget.py  single_file_widget.py  styles.py  utils.py
